fixed spawnmenu clipping with hotbar

--- a/code/ui/SpawnMenu.scss
+++ b/code/ui/SpawnMenu.scss
@@ -1,7 +1,7 @@
 ﻿spawnmenu {
     left: 0px;
     right: 0px;
-    top: 0px;
+    top: 50px;
     bottom: 0px;
     margin: 100px;
     margin-bottom: 200px;
